[CHK-1325] update to nodo activateV2 (#176)

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -307,14 +307,30 @@ components:
           type: string
         amount:
           $ref: '#/components/schemas/AmountEuroCents'
+        transferList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Transfer'
+          minItems: 1
+          maxItems: 5
       required:
         - rptId
         - amount
+        - transferList
       example:
         rptId: "77777777777302012387654312384"
         paymentToken: "paymentToken1"
         reason: "reason1"
-        amount: 100
+        amount: 600
+        transferList:
+          - paFiscalCode: "77777777777"
+            digitalStamp: false
+            transferCategory: "transferCategory1"
+            transferAmount: 500
+          - paFiscalCode: "11111111111"
+            digitalStamp: true
+            transferCategory: "transferCategory2"
+            transferAmount: 100
     NewTransactionRequest:
       description: Request body for creating a new transaction
       type: object
@@ -357,11 +373,29 @@ components:
             - rptId: "77777777777302012387654312384"
               paymentToken: "paymentToken1"
               reason: "reason1"
-              amount: 100
+              amount: 600
+              transferList:
+                - paFiscalCode: "77777777777"
+                  digitalStamp: false
+                  transferCategory: "transferCategory1"
+                  transferAmount: 500
+                - paFiscalCode: "11111111111"
+                  digitalStamp: true
+                  transferCategory: "transferCategory2"
+                  transferAmount: 100
             - rptId: "77777777777302012387654312385"
               paymentToken: "paymentToken2"
               reason: "reason2"
-              amount: 100
+              amount: 400
+              transferList:
+                - paFiscalCode: "44444444444"
+                  digitalStamp: true
+                  transferCategory: "transferCategory1"
+                  transferAmount: 200
+                - paFiscalCode: "22222222222"
+                  digitalStamp: false
+                  transferCategory: "transferCategory2"
+                  transferAmount: 100
         clientId:
           description: transaction client id
           enum:
@@ -628,6 +662,26 @@ components:
         - IO
         - CHECKOUT
         - CHECKOUT_CART
+    Transfer:
+      type: object
+      description: The dto that contains information about the creditor entities
+      properties:
+        paFiscalCode:
+          type: string
+          description: The creditor institution fiscal code
+          pattern: '^[a-zA-Z0-9]{11}'
+        digitalStamp:
+          type: boolean
+          description: True if it is a digital stamp. False otherwise
+        transferCategory:
+          type: string
+          description: The taxonomy of the transfer
+        transferAmount:
+          $ref: '#/components/schemas/AmountEuroCents'
+      required:
+        - paFiscalCode
+        - digitalStamp
+        - transferAmount
     ProblemJson:
       description: Body definition for error responses containing failure details
       type: object
