fix: misc fixes

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -646,6 +646,7 @@ components:
         - NOTIFIED_OK
         - NOTIFIED_KO
         - NOTIFICATION_ERROR
+        - NOTIFICATION_REQUESTED
         - EXPIRED
         - REFUNDED
         - CANCELED
