--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -25,7 +25,8 @@ microservice-chart:
       REDIS_PORT: "6380"
       REDIS_SSL_ENABLED: "true"
       NODO_HOSTNAME: https://api.uat.platform.pagopa.it
-      NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+      #NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+      NODE_FOR_PSP_URI: /ecommerce/mock/nodo/v1/activatePaymentNotice
       NODO_READ_TIMEOUT: "10000"
       NODO_CONNECTION_TIMEOUT: "10000"
       NODO_PARALLEL_REQUESTS: "5"
@@ -42,13 +43,14 @@ microservice-chart:
       TRANSACTION_CLOSEPAYMENT_RETRY_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-close-payment-retry-queue
       TRANSACTION_CLOSEPAYMENT_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-close-payment-queue
       TRANSACTION_REFUND_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-queue
-      PAYMENT_TOKEN_VALIDITY_TIME: "900"
+      PAYMENT_TOKEN_VALIDITY_TIME: "1800"
       TRANSACTIONS_RETRY_OFFSET: "60"
       CLOSURE_RETRY_INTERVAL: "30"
       WEB_LOGGING_LEVEL: "off"
       SERVICE_LOGGING_LEVEL: "info"
       JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
-      PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
+      #PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
+      PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.platform.pagopa.it/ecommerce/mock/pdv/v1"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -65,14 +67,14 @@ microservice-chart:
     httpGet:
       path: /actuator/health/liveness
       port: 8080
-    initialDelaySeconds: 80
+    initialDelaySeconds: 30
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
     httpGet:
       path: /actuator/health/readiness
       port: 8080
-    initialDelaySeconds: 80
+    initialDelaySeconds: 30
     failureThreshold: 6
     periodSeconds: 10
   service:
@@ -123,7 +125,8 @@ microservice-chart:
     REDIS_PORT: "6380"
     REDIS_SSL_ENABLED: "true"
     NODO_HOSTNAME: https://api.uat.platform.pagopa.it
-    NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+    #NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+    NODE_FOR_PSP_URI: /ecommerce/mock/nodo/v1/activatePaymentNotice
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     NODO_PARALLEL_REQUESTS: "5"
@@ -146,7 +149,8 @@ microservice-chart:
     WEB_LOGGING_LEVEL: "off"
     SERVICE_LOGGING_LEVEL: "info"
     JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
-    PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
+    #PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
+    PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.platform.pagopa.it/ecommerce/mock/pdv/v1"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
