--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -122,6 +122,14 @@ stages:
                     VALUE_FILE: "helm/values-dev.yaml"
                     GREEN_VERSION: $(Build.SourceVersion)
 
+  - stage: "API_DEV_test"
+    displayName: 'Running API test on blue app'
+    dependsOn: Deploy_for_DEV
+    steps:
+      - template: azure-templates/api-tests.yml
+        parameters:
+          ENV: "DEV"
+
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
     dependsOn: [ ]
@@ -192,6 +200,13 @@ stages:
                     GREEN_VERSION: $(green_version)
                     BLUE_VERSION: $(Build.SourceVersion)
 
+  - stage: "Blue_API_UAT_test"
+    displayName: 'Running API test on blue app'
+    dependsOn: Deploy_UAT_Blue
+    steps:
+      - template: azure-templates/api-tests.yml
+        parameters:
+          ENV: "UAT"
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
