--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -72,6 +72,11 @@ resources:
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v2.10.1
       endpoint: 'io-azure-devops-github-ro'
+    - repository: pagopaCheckoutTests
+      type: github
+      name: pagopa/pagopa-checkout-tests
+      ref: main
+      endpoint: 'io-azure-devops-github-ro'
 
 pool:
   vmImage: ubuntu-latest
@@ -128,6 +133,7 @@ stages:
     jobs:
       - job: "run API integration tests"
         steps:
+          - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
               ENV: "DEV"
@@ -208,6 +214,7 @@ stages:
     jobs:
       - job: "run API integration tests"
         steps:
+          - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
               ENV: "UAT"
