--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -75,7 +75,7 @@ resources:
     - repository: pagopaCheckoutTests
       type: github
       name: pagopa/pagopa-checkout-tests
-      ref: main
+      ref: CHK-1388-add-header-for-blue-green-deployment
       endpoint: 'io-azure-devops-github-ro'
 
 pool:
@@ -217,7 +217,7 @@ stages:
           - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
-              ENV: "UAT"
+              ENV: "UAT_BLUE"
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
@@ -323,3 +323,14 @@ stages:
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-uat.yaml"
                     GREEN_VERSION: $(green_version)
+
+  - stage: "Green_API_UAT_test"
+      displayName: 'Running API test on green app'
+      dependsOn: Deploy_UAT_Green
+      jobs:
+        - job: newman_api_test
+          steps:
+            - checkout: pagopaCheckoutTests
+            - template: azure-templates/api-tests.yml
+              parameters:
+                ENV: "UAT_GREEN"
