[CHK-1384] fix: minor

--- a/.devops/azure-templates/api-tests.yml
+++ b/.devops/azure-templates/api-tests.yml
@@ -10,7 +10,7 @@ steps:
     displayName: 'Newman installation'
   - script: |
       newman run api-tests/checkout-tests/checkout-for-ecommerce-api.tests.json -e $(ENV_FILE) --ignore-redirects --reporters cli,junit --reporter-junit-export Results/api-TEST.xml
-    displayName: 'Run api test uat app'
+    displayName: 'Run api test app - env file: ${ENV_FILE}'
     continueOnError: true
   - task: PublishTestResults@2
       inputs:
