--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -351,6 +351,10 @@ components:
           type: string
           pattern: (?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4]\d|[01]?\d\d?)\.){3}(?:25[0-5]|2[0-4]\d|[01]?\d\d?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])
           example : mario.rossi@gmail.it
+        idCart:
+          description: Cart identifier provided by creditor institution
+          type: string
+          example: idCartFromCreditorInstitution
       required:
         - paymentNotices
         - email
@@ -405,6 +409,10 @@ components:
         authToken:
           description: authorization token
           type: string
+        idCart:
+          description: Cart identifier provided by creditor institution
+          type: string
+          example: idCartFromCreditorInstitution
       required:
         - transactionId
         - amountTotal
