[CHK-1384] feat: add api tests stage for deploy-pipelines.yml (#189)
* [CHK-1384] feat: add api tests stage for deploy-pipelines.yml

* [CHK-1384] fix: pipeline

* [CHK-1384] fix: pipeline

* [CHK-1384] fix: pipeline

* [CHK-1384] fix: pipeline

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: api test env switch

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: pipeline format

* [CHK-1384] fix: api tests pipeline env file param

* [CHK-1384] fix: minor

* [CHK-1384] fix: minor

* [CHK-1384] fix: env file ref

* [CHK-1384] fix: pipeline conditions

* [CHK-1384] fix: pipeline conditions

* [CHK-1384] fix: pipeline conditions

* [CHK-1384] fix: pipeline conditions

* [CHK-1384] fix: pipeline conditions

* [CHK-1384] fix: mark api test as mandatory for deployment

* [CHK-1384] fix: pipeline

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -72,6 +72,11 @@ resources:
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v2.10.1
       endpoint: 'io-azure-devops-github-ro'
+    - repository: pagopaCheckoutTests
+      type: github
+      name: pagopa/pagopa-checkout-tests
+      ref: CHK-1388-add-header-for-blue-green-deployment
+      endpoint: 'io-azure-devops-github-ro'
 
 pool:
   vmImage: ubuntu-latest
@@ -121,6 +126,17 @@ stages:
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-dev.yaml"
                     GREEN_VERSION: $(Build.SourceVersion)
+
+  - stage: "API_DEV_test"
+    displayName: 'Running API test on blue app'
+    dependsOn: Deploy_for_DEV
+    jobs:
+      - job: newman_api_test
+        steps:
+          - checkout: pagopaCheckoutTests
+          - template: azure-templates/api-tests.yml
+            parameters:
+              ENV_FILE: "api-tests/dev.envs.json"
 
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
@@ -192,10 +208,21 @@ stages:
                     GREEN_VERSION: $(green_version)
                     BLUE_VERSION: $(Build.SourceVersion)
 
+  - stage: "Blue_API_UAT_test"
+    displayName: 'Running API test on blue app'
+    dependsOn: Deploy_UAT_Blue
+    jobs:
+      - job: newman_api_test
+        steps:
+          - checkout: pagopaCheckoutTests
+          - template: azure-templates/api-tests.yml
+            parameters:
+              ENV_FILE: "api-tests/uat.blue.envs.json"
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
-    dependsOn: Deploy_UAT_Blue
+    dependsOn: Blue_API_UAT_test
+    condition: succeeded()
     jobs:
       - job: Bluegreen_WaitForApproval
         displayName: Manual blue deploy approval
@@ -211,8 +238,11 @@ stages:
   - stage: Release
     ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], True) }}:
       dependsOn: Build_release_candidate
+
+
     ${{ if eq(parameters['UAT_SKIP_BLUE_DEPLOYMENT'], False) }}:
       dependsOn: Bluegreen_WaitForApproval
+      condition: succeeded()
     jobs:
       - job: make_release
         displayName: Make github release
@@ -297,3 +327,14 @@ stages:
                     APP_NAME: $(K8S_IMAGE_REPOSITORY_NAME)
                     VALUE_FILE: "helm/values-uat.yaml"
                     GREEN_VERSION: $(green_version)
+
+  - stage: "Green_API_UAT_test"
+    displayName: 'Running API test on green app'
+    dependsOn: Deploy_UAT_Green
+    jobs:
+      - job: newman_api_test
+        steps:
+          - checkout: pagopaCheckoutTests
+          - template: azure-templates/api-tests.yml
+            parameters:
+              ENV_FILE: "api-tests/uat.envs.json"
