--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -75,7 +75,7 @@ resources:
     - repository: pagopaCheckoutTests
       type: github
       name: pagopa/pagopa-checkout-tests
-      ref: CHK-1388-add-header-for-blue-green-deployment
+      ref: main
       endpoint: 'io-azure-devops-github-ro'
 
 pool:
