[CHK-1384] fix: differentiate test report name

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -137,6 +137,7 @@ stages:
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/dev.envs.json"
+              TEST_FILE_PREFIX: "dev-api"
 
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
@@ -218,6 +219,7 @@ stages:
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/uat.transactions.blue.envs.json"
+              TEST_FILE_PREFIX: "blue-uat-api"
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
@@ -338,3 +340,4 @@ stages:
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/uat.envs.json"
+              TEST_FILE_PREFIX: "green-uat-api"
