--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -137,7 +137,7 @@ stages:
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/dev.envs.json"
-              TEST_FILE_PREFIX: "dev-api"
+              TEST_FILE_PREFIX: "dev"
 
   - stage: "Build_release_candidate"
     displayName: 'Build release candidate'
@@ -219,7 +219,7 @@ stages:
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/uat.transactions.blue.envs.json"
-              TEST_FILE_PREFIX: "blue-uat-api"
+              TEST_FILE_PREFIX: "blue-uat"
 
   - stage: "Bluegreen_WaitForApproval"
     displayName: 'UAT green approval deployment'
@@ -340,4 +340,4 @@ stages:
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/uat.envs.json"
-              TEST_FILE_PREFIX: "green-uat-api"
+              TEST_FILE_PREFIX: "green-uat"
