--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -48,3 +48,11 @@ jwt.validityMillis=600000
 
 confidentialDataManager.personalDataVault.apiKey=personal-data-vault-api-key
 confidentialDataManager.personalDataVault.apiBasePath=http://personal-data-vault-test-host/v1/api
+
+logo.cardBrandMapping={\
+  VISA:'https://visa.cdn.url',\
+  MASTERCARD:'https://mastercard.cdn.url',\
+  AMEX:'https://amex.cdn.url',\
+  MAESTRO:'https://maestro.cdn.url',\
+  DINERS:'https://diners.cdn.url',\
+  UNKNOWN:'https://unknown.cdn.url'}
