--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,5 @@ confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
 confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
 
 warmup.request.newTransaction.noticeCodePrefix=${WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX:3020}
+
+logo.cardBrandMapping=${LOGO_CARD_BRANDING_MAPPING}
