fix: update env local variables

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ JWT_TOKEN_VALIDITY_TIME_MILLIS=600000
 
 PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8092"
+
+LOGO_CARD_BRANDING_MAPPING={VISA:'https://visa.cdn.url',MASTERCARD:'https://mastercard.cdn.url',DINERS:'https://diners.cdn.url',MAESTRO:'https://maestro.cdn.url',AMEX:'https://american-express.cdn.url',UNKNOWN:'https://unknown.cdn.url'}
