--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -53,12 +53,12 @@ microservice-chart:
       WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3020"
       LOGO_CARD_BRANDING_MAPPING: >
         {
-        VISA:'https://visa.cdn.url', 
-        MASTERCARD:'https://mastercard.cdn.url',
-        DINERS:'https://diners.cdn.url',
-        MAESTRO:'https://maestro.cdn.url',
-        AMEX:'https://american-express.cdn.url',
-        UNKNOWN:'https://unknown.cdn.url'
+        VISA:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_visa.png', 
+        MASTERCARD:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_mc.png',
+        DINERS:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_diners.png',
+        MAESTRO:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_maestro.png',
+        AMEX:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_amex.png',
+        UNKNOWN:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/generic.png'
         }
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
@@ -168,12 +168,12 @@ microservice-chart:
     WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3020"
     LOGO_CARD_BRANDING_MAPPING: >
       {
-      VISA:'https://visa.cdn.url', 
-      MASTERCARD:'https://mastercard.cdn.url',
-      DINERS:'https://diners.cdn.url',
-      MAESTRO:'https://maestro.cdn.url',
-      AMEX:'https://american-express.cdn.url',
-      UNKNOWN:'https://unknown.cdn.url'
+      VISA:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_visa.png', 
+      MASTERCARD:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_mc.png',
+      DINERS:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_diners.png',
+      MAESTRO:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_maestro.png',
+      AMEX:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/carta_amex.png',
+      UNKNOWN:'https://wisp2.pagopa.gov.it/wallet/assets/img/creditcard/generic.png'
       }
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
