--- a/.env.example
+++ b/.env.example
@@ -55,4 +55,4 @@ JWT_TOKEN_VALIDITY_TIME_MILLIS=600000
 PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8092"
 
-LOGO_CARD_BRANDING_MAPPING={VISA:'https://visa.cdn.url',MASTERCARD:'https://mastercard.cdn.url',DINERS:'https://diners.cdn.url',MAESTRO:'https://maestro.cdn.url',AMEX:'https://american-express.cdn.url',UNKNOWN:'https://unknown.cdn.url'}
+LOGO_CARD_BRANDING_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'}
