fix: logo URI (#204)
* fix: logo URI

* feat: PGS VPOS circuit enumeration

* fix: test formatting

* fix: add tests

* fix: update commons version

* trigger CR pipeline

* fix: update env local variables

* fix: add configuration class to load and validate brand map

* fix: add tests

* fix: comment + code review

* fix: update logo URIs

* fix: Update pgs spec infra brand

* fix: update refs to checkout CDN logos

* fix: merge main branch

* fix: use dev logos for UAT env

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ JWT_TOKEN_VALIDITY_TIME_MILLIS=600000
 
 PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8092"
+
+LOGO_CARD_BRANDING_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'}
