--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -51,6 +51,15 @@ microservice-chart:
       JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
       PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
       WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3020"
+      LOGO_CARD_BRANDING_MAPPING: >
+        {
+        VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png', 
+        MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',
+        DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',
+        MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',
+        AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',
+        UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'
+        }
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -157,6 +166,15 @@ microservice-chart:
     JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
     PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
     WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3020"
+    LOGO_CARD_BRANDING_MAPPING: >
+      {
+      VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png', 
+      MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',
+      DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',
+      MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',
+      AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',
+      UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'
+      }
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
